--- a/sass/grid.css
+++ b/sass/grid.css
@@ -55,6 +55,12 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
+.swiper {
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
 h3 {
   font-size: 1.25rem;
   line-height: 2rem;
@@ -92,6 +98,10 @@ footer {
   padding: 22px 0 56px 0;
 }
 
+.col {
+  grid-column: span 5;
+}
+
 .grid {
   align-items: center;
   display: grid;
@@ -121,6 +131,10 @@ footer {
   letter-spacing: -2%;
   padding: 32px 0 8px 0;
 }
+.header .logo h1:hover {
+  font-size: 41px;
+  transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22);
+}
 .header .logo span {
   font-size: 0.75rem;
   color: rgba(24, 0, 31, 0.54);
@@ -144,9 +158,10 @@ footer {
 .header .navbar-social .fa-facebook:hover {
   color: #3471eb;
 }
-.header .navbar-social .fa- .header .navbar-social .fa:hover {
+.header .navbar-social .fa:hover {
   cursor: pointer;
   color: #F21D44;
+  transition: all 0.3s ease-in;
 }
 .header .navbar-menu {
   position: fixed;
@@ -189,10 +204,7 @@ footer {
 .header .nav-list a:hover {
   color: #F21D44;
   border-bottom: 1px solid #F21D44;
-}
-
-.col {
-  grid-column: 8/span 5;
+  transition: all 0.3s ease-in;
 }
 
 .hero-content {
@@ -253,14 +265,83 @@ footer {
 
 .wrapper {
   text-align: start;
+  justify-items: start;
+  align-items: flex-start;
 }
 .wrapper .hot-topic {
   display: grid;
-  grid-column: 1/span 7;
+  grid-column: 1/8;
+  align-items: flex-start;
+  grid-template-columns: repeat(12, 1fr);
   gap: 17px;
 }
+.wrapper .hot-topic .swiper {
+  width: 100%;
+  height: 100%;
+  grid-column: 1/13;
+}
+.wrapper .hot-topic .swiper-wrapper {
+  grid-column: span 12;
+}
+.wrapper .hot-topic .swiper-slide {
+  height: 520px;
+  overflow: scroll;
+  justify-content: flex-start;
+  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(12, 1fr);
+  overflow-x: hidden;
+}
+.wrapper .hot-topic .swiper-slide .hot-topic-feature {
+  grid-column: span 7;
+  position: relative;
+}
+.wrapper .hot-topic .swiper-slide .hot-topic-feature img {
+  width: 100%;
+  height: 100%;
+  border-radius: 4px;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.wrapper .hot-topic .swiper-slide .hot-topic-feature-text {
+  padding: 25px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
+}
+.wrapper .hot-topic .swiper-slide .hot-topic-feature-text .info {
+  font-size: 0.75rem;
+  font-weight: 400;
+  line-height: 0.875rem;
+  color: white;
+  display: flex;
+  gap: 18px;
+}
+.wrapper .hot-topic .swiper-slide .hot-topic-feature-text .info i {
+  margin-right: 6px;
+}
+.wrapper .hot-topic .swiper-slide .hot-topic-feature-text h3 a {
+  display: inline-block;
+  color: white;
+  padding: 16px 0;
+}
+.wrapper .hot-topic .swiper-slide .hot-topic-feature-text h3 a:hover {
+  color: #F21D44;
+  transition: all 0.3s ease-in;
+}
+.wrapper .hot-topic .swiper-slide .hot-topic-feature-text .font-500 {
+  font-size: 0.875rem;
+  font-weight: 400;
+  color: white;
+  line-height: 24px;
+}
+.wrapper .hot-topic .swiper-slide .fashion {
+  width: 100%;
+  grid-column: span 12;
+}
 .wrapper .hot-topic-title {
-  grid-column: 1/span 7;
+  grid-column: 1/span 12;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -277,7 +358,7 @@ footer {
   display: inline-block;
   height: 2px;
   background-color: #e4e4e4;
-  min-width: 50%;
+  min-width: 40%;
 }
 .wrapper .hot-topic-title p {
   display: flex;
@@ -293,68 +374,31 @@ footer {
   gap: 8px;
 }
 .wrapper .hot-topic-title p span i {
-  border: 1px solid rgb(186, 186, 186);
+  border: 1px solid rgba(24, 0, 31, 0.54);
   font-size: 1rem;
   padding: 6px 10px;
-  color: rgb(186, 186, 186);
+  color: #010D00;
 }
-.wrapper .hot-topic-title p span .fa-angle-right {
-  color: rgb(41, 41, 41);
-}
-.wrapper .hot-topic-feature {
-  grid-column: 1/span 4;
-  position: relative;
-}
-.wrapper .hot-topic-feature img {
-  width: 100%;
-  height: 100%;
-  border-radius: 4px;
-}
-.wrapper .hot-topic-feature-text {
-  padding: 25px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
-}
-.wrapper .hot-topic-feature-text .info {
-  font-size: 0.75rem;
-  font-weight: 400;
-  line-height: 0.875rem;
-  color: white;
-  display: flex;
-  gap: 18px;
-}
-.wrapper .hot-topic-feature-text .info i {
-  margin-right: 6px;
-}
-.wrapper .hot-topic-feature-text h3 a {
-  display: inline-block;
-  color: white;
-  padding: 16px 0;
-}
-.wrapper .hot-topic-feature-text h3 a:hover {
-  color: #F21D44;
-}
-.wrapper .hot-topic-feature-text .font-500 {
-  font-size: 0.875rem;
-  font-weight: 400;
-  color: white;
-  line-height: 24px;
+.wrapper .hot-topic-title p span .swiper-button-disabled {
+  color: rgba(24, 0, 31, 0.54);
 }
 .wrapper .hot-topic .news {
-  grid-column: 5/span 3;
+  grid-column: 8/span 5;
+}
+.wrapper .hot-topic .news img {
+  height: 100%;
 }
 .wrapper .hot-topic .news-links {
   align-items: center;
   display: flex;
   gap: 10px;
 }
+.wrapper .hot-topic .news-links img {
+  border-radius: 4px;
+  height: 100%;
+}
 .wrapper .hot-topic .news-links:not(:nth-child(1)) {
   margin-top: 15px;
-}
-.wrapper .hot-topic .news-links:not(:nth-child(1)) img {
-  border-radius: 4px;
 }
 .wrapper .hot-topic .news-links a {
   display: block;
@@ -367,10 +411,12 @@ footer {
 }
 .wrapper .hot-topic .news-links a:hover {
   color: #F21D44;
+  transition: all 0.3s ease-in;
 }
 
 .info {
   color: rgba(24, 0, 31, 0.54);
+  font-size: 0.75rem;
 }
 .info i {
   margin-right: 6px;
@@ -392,10 +438,10 @@ footer {
   letter-spacing: -2%;
 }
 .fashion-title .line {
-  display: inline-block;
   height: 2px;
-  background-color: rgb(228, 228, 228);
-  width: 50%;
+  display: inline-block;
+  background-color: #e4e4e4;
+  width: 80%;
 }
 .fashion .feature {
   margin-top: 24px;
@@ -424,6 +470,7 @@ footer {
 }
 .fashion .feature a:hover {
   color: #F21D44;
+  transition: all 0.3s ease-in;
 }
 .fashion .feature-text {
   position: absolute;
@@ -472,8 +519,8 @@ footer {
   margin-right: 10px;
 }
 
-.gallery {
-  gap: 30px;
+.gallery .swiper {
+  grid-column: span 12;
 }
 .gallery-title {
   display: flex;
@@ -490,15 +537,15 @@ footer {
 .gallery-title .line {
   height: 1px;
   background-color: rgb(228, 228, 228);
-  width: 50%;
+  width: 80%;
 }
 .gallery-title .fa {
   padding: 6px 10px;
-  border: 1px solid rgba(24, 0, 31, 0.54);
-  color: rgb(186, 186, 186);
-}
-.gallery-title .fa-angle-right {
+  border: 1px solid #010D00;
   color: #010D00;
+}
+.gallery-title .swiper-button-disabled {
+  color: rgba(24, 0, 31, 0.54);
 }
 .gallery-card {
   text-align: start;
@@ -508,14 +555,13 @@ footer {
 .gallery-card img {
   width: 100%;
   border-radius: 4px;
-  aspect-ratio: 1/1;
 }
 .gallery-card-content {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
-  padding: 25px;
+  padding: 16px;
   z-index: 20;
   color: white;
   background: linear-gradient(180deg, rgba(0, 0, 0, 0) 0%, #000000 100%);
@@ -536,28 +582,17 @@ footer {
 }
 .gallery-card-content .heading:hover {
   color: #F21D44;
+  transition: all 0.3s ease-in;
 }
 .gallery-card-content .info {
   display: flex;
-  gap: 18px;
+  justify-content: space-between;
   font-size: 0.75rem;
   line-height: 14px;
   color: white;
 }
 .gallery-card-content .info .fa {
   margin-right: 6px;
-}
-.gallery .card1 {
-  grid-column: 1/4;
-}
-.gallery .card2 {
-  grid-column: 4/7;
-}
-.gallery .card3 {
-  grid-column: 7/10;
-}
-.gallery .card4 {
-  grid-column: 10/13;
 }
 
 .blog-catagories {
@@ -577,11 +612,12 @@ footer {
   display: block;
   height: 1px;
   background-color: rgb(228, 228, 228);
-  width: 50%;
+  width: 60%;
 }
 
 .news-links {
   align-items: center;
+  text-align: start;
   display: flex;
   gap: 10px;
 }
@@ -606,10 +642,7 @@ footer {
 }
 .news-links a:hover {
   color: #F21D44;
-}
-
-.blog-container {
-  text-align: start;
+  transition: all 0.3s ease-in;
 }
 
 .blog-fashion {
@@ -665,6 +698,7 @@ footer {
   border-radius: 25px 0;
   background-image: linear-gradient(to right top, red, blue);
   color: white;
+  transition: all 0.3s ease-in;
 }
 
 .overview {
@@ -689,7 +723,7 @@ footer {
 .overview-catagory .line {
   height: 1px;
   background-color: rgba(24, 0, 31, 0.54);
-  width: 50%;
+  width: 80%;
 }
 .overview .ov-card {
   align-items: center;
@@ -707,6 +741,10 @@ footer {
   font-family: "roboto slab";
   line-height: 2.5rem;
   color: rgb(14, 19, 43);
+}
+.overview .ov-card a:hover {
+  color: #F21D44;
+  transition: all 0.3s ease-in;
 }
 .overview .ov-card .info {
   font-size: 0.75rem;
@@ -766,7 +804,7 @@ footer {
 .overview .tech-title .line {
   display: inline-block;
   height: 1px;
-  width: 200px;
+  width: 70%;
   background: rgb(14, 19, 43);
   top: 20px;
 }
@@ -785,6 +823,10 @@ footer {
   padding: 14px 0 18px 0;
   display: block;
   color: white;
+}
+.overview .tech a:hover {
+  color: #F21D44;
+  transition: all 0.3s ease-in;
 }
 .overview .tech .info {
   color: white;
@@ -810,6 +852,10 @@ footer {
   color: #010D00;
   font-size: 0.75rem;
 }
+.overview .tech .ov-card a:hover {
+  color: #F21D44;
+  transition: all 0.3s ease-in;
+}
 .overview .tech .ov-card .info {
   color: rgba(24, 0, 31, 0.54);
   padding-top: 9px;
@@ -824,8 +870,12 @@ footer {
 }
 .overview .tech .tech-title .line {
   height: 1px;
-  width: 80%;
+  width: 70%;
   color: rgba(24, 0, 31, 0.54);
+}
+.overview .tech .tech-title a:hover {
+  color: #F21D44;
+  transition: all 0.3s ease-in;
 }
 .overview .tech .popular-catagory {
   display: flex;
@@ -840,6 +890,9 @@ footer {
   line-height: 1.5rem;
   font-weight: 400;
   color: rgb(14, 19, 43);
+}
+.overview .tech .popular-catagory .line {
+  width: 40%;
 }
 .overview .recent .tech-title {
   margin-bottom: 0;
@@ -861,6 +914,7 @@ footer {
 }
 .overview .recent-post-card .text h4 a:hover {
   color: #F21D44;
+  transition: all 0.3s ease-in;
 }
 .overview .recent-post-card .text .date {
   display: inline-block;
@@ -895,8 +949,8 @@ footer {
   padding: 32px 0 8px 0;
 }
 .footer-logo h1:hover {
-  cursor: pointer;
-  font-size: 3.8rem;
+  font-size: 41px;
+  transition: all 0.3s cubic-bezier(0.895, 0.03, 0.685, 0.22);
 }
 .footer-logo span {
   font-size: 0.75rem;
@@ -919,6 +973,7 @@ footer {
 .footer-nav a:hover {
   color: #F21D44;
   border-bottom: 1px solid #F21D44;
+  transition: 0.3s all ease-in;
 }
 .footer-social {
   display: flex;
@@ -928,6 +983,7 @@ footer {
 }
 .footer-social i:hover {
   color: #F21D44;
+  cursor: pointer;
 }
 
 .copyright {
@@ -1030,21 +1086,39 @@ footer {
     color: white;
     border-bottom: 1px solid white;
   }
+  .swiper {
+    grid-column: span 12;
+  }
+  .swiper .swiper-slide {
+    grid-column: span 12;
+  }
+  .swiper .swiper-slide .fashion {
+    width: 100%;
+  }
   .hero-content {
     display: block;
   }
   .wrapper .hot-topic {
     grid-column: 1/13;
   }
-  .wrapper .fashion {
-    grid-column: 1/13;
-    margin: 0;
+  .wrapper .hot-topic .swiper {
+    grid-column: span 12;
   }
-  .gallery .card1,
-.gallery .card2,
-.gallery .card3,
-.gallery .card4 {
+  .wrapper .hot-topic .swiper-slide {
+    align-items: flex-start;
+  }
+  .wrapper .hot-topic .swiper-slide .hot-topic-feature {
     grid-column: span 6;
+  }
+  .wrapper .hot-topic .swiper-slide .news {
+    grid-column: span 6;
+  }
+  .wrapper .fashion {
+    grid-column: 1/span 12;
+    width: 100%;
+  }
+  .gallery-title .line {
+    width: 50%;
   }
   .blog-fashion,
 .blog-lifestyle,
@@ -1066,7 +1140,37 @@ footer {
   html {
     font-size: 13px;
   }
-  .wrapper .hot-topic-feature {
+  .hero {
+    display: block;
+  }
+  .wrapper .hot-topic .swiper {
+    grid-column: span 12;
+  }
+  .wrapper .hot-topic .swiper-slide {
+    grid-column: span 12;
+  }
+  .wrapper .hot-topic .swiper-slide .hot-topic-feature {
+    grid-column: span 12;
+  }
+  .wrapper .hot-topic .swiper-slide .news {
+    grid-column: span 12;
+  }
+  .wrapper .hot-topic .swiper-slide .news img {
+    width: 200px;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+  .wrapper .fashion {
+    grid-column: 1/span 12;
+    width: 100%;
+  }
+  .wrapper .fashion-title {
+    grid-column: span 12;
+  }
+  .wrapper .fashion .feature {
+    grid-column: span 12;
+  }
+  .swiper-wrapper {
     grid-column: span 12;
   }
   .wrapper .hot-topic .news {
@@ -1083,9 +1187,6 @@ footer {
   }
   .gallery-card img {
     width: 100%;
-  }
-  .gallery-title .line {
-    display: none;
   }
   .blog-fashion,
 .blog-lifestyle,
